--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div id="xml">
-        <p data-text="bomdia"></p>
-        <p data-text="boatarde"></p>
-        <p data-text="boanoite"></p>
+        <p data-text="bomdia">a</p>
+        <p data-text="boatarde">a</p>
+        <p data-text="boanoite">a</p>
     </div>
     <div id="json">
-        <p data-text="bomdia"></p>
-        <p data-text="boatarde"></p>
-        <p data-text="boanoite"></p>
+        <p data-text="bomdia">b</p>
+        <p data-text="boatarde">b</p>
+        <p data-text="boanoite">b</p>
     </div>
 </body>
 </html>
